<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="731dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/eaticon" />


        <EditText
            android:id="@+id/email"
            android:hint="NumeroTel"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"

            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"/>
        <EditText
            android:id="@+id/name"
            android:hint="name"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform" />
        <EditText
            android:id="@+id/password"

            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
             />

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/yellow"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/yellow"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btnSignActive"
            android:text="Already Registred Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>